--- a/SylDesk/SylDesk/CalculadoraEcu.resx
+++ b/SylDesk/SylDesk/CalculadoraEcu.resx
@@ -118,6 +118,178 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAACboSURBVHhe7Z0HmFRVnsXpVJ0j0OTQ3YCABEEJRlBAVECyRMk00OBIUqIgNDQ52+SMEiSKklHB
+        iOKIypgYZ8zCiKAM7u7s7K5373ldF4rmQoeqeqHr/L/v9ylQ9d5N59z4XhVjMBgMBoPBYDAYDAaDwWAw
+        GAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaD
+        wWAwGAwGg8FgMBhFNLK3vpS0euf+7tsOHluzZf9rJ55/5ejXG/YeFsS/rN9zSIyZPluMyZorxs6YT/zE
+        uJnzxcQ5i75+dn72icxFy9cMf3ZG9/Qxk5PczT9wY8nm3eVe2PfqknV7Dl2SJiDmbtguZq7ZKrJWbRbT
+        Vr5ATKB174EGbfoOEY/2G0r8RPsBT4hOg4aL7sOeElL84unpcy9NmrtkyYCnninnlkNgxaqd+/ut2X3g
+        woJNOyl4C1EG0Lp3Ok3ARGAIvYaPFSOnzrowYsrMfm5ZFP2Yu25b6MrtLy+QPf4fM1Zv0TZKYh5XDYAm
+        YAUd05/EiOCP4c9mLXj8T0+HumVSNGPW2q1BS7fsWbDohV1iOnt9W3CtAUj60ATMpp0cDfQdNUEMnTB1
+        QZchI4PccilaMXP15qBFm3b0l+L/g+K3D9cZAE3AEgwTGDn+j36jJvTvPHhE0TKB6Ss2BT27ZHWFRc/v
+        upDFYb+t0BqApA1NwHTaD/wTRgIXOg4YWqFT+pNFwwQmLV4dNGXpuuCsFRuzZ6/bpm2ExDp04lfQBMyn
+        S8ZI0XXIiOx2/YcGt+2X4XwTGDc3O3jktHnJc9a/eIlDf/uhE74nNAFzadd/mOg2bPSlll16J7d6fGCw
+        W0bOjIwJmUGjps8PGT51Tu+Za7dqGyCxFp3oc9OmzyCagIl0GjxcNO/cs3fLrn1Cmnfq4dxRQP9RE4Lb
+        9x7omrho1Qbu9dsTneC1cCRgGu0HPiEeeXzghvr3NXc1afuYM0cBLTt0Deo5dFRImQqVIp/NXn9S1/iI
+        9WjFfiNoAqbQVtK69+CT8cVLRt71cLuQ+k2aO28U8ECbDkGPDRgaJv83Zsqyjd/qGh+xHq3QbwZNwBTa
+        9BnyLbTTsEWrsDp3NXGeAdzbsnVwtdq3hcv/jZ+6fJO28RHr0Yo8L2gCfqdN3wwB7ZSplBp+a8O7nTcN
+        aNS0RUhSyeRI+b9JU5Zt0DY+Yj1agecHmoBfad1nCAwgKTo+IfKWeg1DDFE5KW6/pynONUdLStAA7ItW
+        3PkGJpChbcDEO9wGUAIaqlKnvrOeEYiJiw+6rfE9xvxfkkwDsC96YRcEmoA/cBtAMjSUVuu2sOJlyjpn
+        HSA6Ni6oTsO7YACxktI0APuiF3VBoQn4GrcBlIaGUmrWCUsqVcZZBlA8ubRL/i8NwOboBV1wcGLwUZqA
+        z/A0gPjiJVxJyaUdZAAxsdIASsEA4iRlaAD2RSfmwkIT8B1uAygDDcUllXAlOskAoqQBJJWkATgBnZC9
+        wTCBfjQBb7neAErRAIjv0YnYW2gC3nOtARR3JZSkARA/oBOwL6AJeAcNgJiCTry+gyZQWGgAxBT0wvUl
+        MAF9Iyc3hgZATEEvWt+C9wnoGjm5MTQAYgo6wfqedGkCg7UNneihARBT0AvWH+C0IE0gv9AAiCnoxeov
+        aAL5hQZATEEvVH9CE8gPNABiCnqR+huuCeQFDYCYgl6gZkATuBk0AGIKenGaBU3gRtAAiCnohWkmNAEd
+        NABiCnpRmo3eBNa/uPu6v/Ml/r6+N9AAiCnoBWkF0gQ8dgfe+/BjcfnyZeO/nsLwFf6+vrfQAIgp6MVo
+        HTABJU6Fr0Xq7+v7AhoAMQWdCK3kvQ9PXSNOX4s0t/h9fX1fQQMgpqAToVXcSPwKb0V6I/Er7GQCNABi
+        CjohWsG6bTu0osxNYUWal/gVdlkYpAEQU9CJ0SryGgEoCmoC+RU/RwA+ChqAc9AJ0Up8bQJOFD+gARBT
+        0InQanxlAk4VP6ABEFPQCdAOeGsCThY/oAEQU9CJzy4U1gScLn5AAyCmoBOenSioCRQF8QMagJes23NQ
+        HHnnA8eA9Ory4W90orMb+TWB/GJ38QMagJdAVLrKtytIry4f/kYnODviKxNwgvgBDcBLaAD5Qyc2u+Kt
+        CThF/IAG4CU0gPyhE5qdKawJOEn8gAbgJTSA/KETmd0pqAk4TfyABuAlNID8oROYE9CV4Y3QCczu0AC8
+        hAaQP3TisjscAdg8aAAFhwaQP7gG4ICwgwGQ/KETmV3hLoBDggbgHHRCsyPeil/hFBOgARBT0InNbvhK
+        /AonmAANgJiCTnB2Ir/ix+cK9nl7mwANgJhCbsHZiYKKv+Dfs68J0ACIKXgKx04UVvwF/749TYAGQExB
+        Jx6r8Vb8CiebAA2AmIJOOFbiK/ErnGoCNABiCjrRWIWvxa9wognQAIgp6ARjBfn/XYCCiV/hNBOgARBT
+        0InFKvISaWHFr8iPCYzJmqcVpNnQAIgp6IRiJTcSqbfiV9zMBMZkzRVt+mZoBWk2NABiCjqRWE1ukfpK
+        /AqdCUD8hvikAdjBBGgAxBR0ArEDSqS+Fr/C0wSemjZTtOkzyBC/IUAbmAANgJiCThx2AQuDur/3FTAB
+        iF/9+RoT6GetCdAAiCl4CoLABNKlAD1NYMgVUZoJDYCYgk4Egc71JmD+SIAGQExBJwCS2wSGmm4CNABi
+        CrrGT3Kw0gRoAMQUdA2feGCRCdAAiCloGz3JBUzgqjjNMAEaADEFfYMn12OuCdAAiCnoGzu5nvSccwIe
+        IvWnCdAAiCnoGzvRI02g7+BrhOovE6ABEFPQN3RyY643gaunB30HDYCYgr6Rk5vjfxOgARBT0Ddwkjca
+        E/DYLvQWGgAxBX3jJvkDC4P+MQEaADEFfcMm+cc/JkADIKagb9SkYOhMwDtoAMQU9A2aFBzfmgANgJiC
+        vjGTwuE7E6ABEFPQN2RSeKQJXLc7UHBoAMQU9I2YeIu3JkADIKaga7x2osuTo8TAadPEyOXZYsrurWLe
+        8YMi+8M3xeozH4j13/9FbDx/Rmy89Hex8fdvxKb//Nb4r/Fn+ff4d3wOn8f38H1cB9fDdXX38yXemAAN
+        gJiCruFaRadhw8XgWbPEpJ2bxZIPjos1P/5FrPqPr8Wcy1+KMf88Lfr++oHocPFd8fCFt0TTX46Lxudf
+        F/XOHxW3/nxYVP/5kKgmwX/xZ/w9/h2fw+fxPXwf18H1cF1cH/fB/XBf3F+XLm8orAnQAIgp6BqtWbTt
+        P1j0m5opJu3aIpZ+ekKs/O2vYvrlL8TA3/4sWknRNjr/mhT0YUPYvgbXxfVxH9wP98X9kQ6kB+lC+nTp
+        LiiFebEoDYCYgq7B+pNHpagGTJ8uph/dK1b88ImY+/sZkf7bh6L5hTdEnZ+PaMVqFrg/0oH0IF1IH9KJ
+        9CLduvzkl4KaAA2AmIKusfqD7mPGiQm7Novsb06JmbK37fXrSXGnHKL7q4f3FqQL6UM6kV6kG+lHPnT5
+        yw8FMQEaADEFXUP1FW36DhL9Z2SJ2SdfE4t++1IMkT3rvb8cEzVsKvobgfQi3Ug/8oH8IF/Iny7fNyO/
+        JkADIKaga6Te0nbAEDFk8QIx//N35dz6c9Hx4rui7vmjWnE5DeQD+UG+kD/kE/nVlcONyM/CIA2AmIKu
+        gRaWNv0GicGL5ot5Z06ISf/8VDxy4W1R02G9fX5BvpA/5BP5Rb6Rf1256MhrJEADIKaga5yFofe0TDHz
+        L2+JyVIQ2HYrqsLPDfKJ/CLfyD/KQVc+Om5mAjQAYgq6hlkQOo8YLZ55fa+Y9tunou3Fd4w9eJ1QijrI
+        N/KPckB5oFx05ZWbG5kADYCYgq5R5gdsi2WsXSZmnv1Y9Pn1pLitiMzxvQXlgPJAuaB88rN9qDOBImAA
+        yTQAB6BrkHnx2OinxeQPjhin6rA6fotGCIEMygPlgvJBOaG8dOXoSW4TcLgBxAQllqABOAFdY7wZA5cv
+        FplnT4muv74nall8cMfuoHxQTigvlJuuPD3xNAFHG0BkNA3AKegaoo52Q54QIw/tEGMvnTbO17PXzx8o
+        J5QXyg3lh3LUlW8OeJQ4xwSuN4BkZxlAQomSNAAHoG+I19Jp9FNiwqfHRfpvf+Zcv5Cg3FB+KEeUp66c
+        AX59CCZwjQEkOtEAil81gIxpi8SwGc8RG6JrhJ70mDldjP/hpHH4JVC29vwFyg/liPJEuerKG8AEWkug
+        HWjIkQYQTwNwBLoGqOizfJEY+/OH4sELb3LI7yNQjihPlCvKV1fuoJUE2oGGHGcAETQAx6BrfKD/8yvE
+        6IsfGavZuoZMvAPlivJFOevK/5HH+3sYQJIroYSTDCAqOig+qQQNwAFc1/j6pIv+29eKP136SDQ8/5q2
+        8RLfgPJFOaO8Ue6e9UADIKbg2ejQCPvtXCcyfjsl6p9/VdtoiW9BOaO8Ue6eJnCNAThtF4AG4Bw8DaD3
+        9jXGI68Uv7mgvFHuKH+tASQnuxLLlqEBEN+jGlzPTcvEIIrfMlDuKH/UQ24DSKhQzlWyWhUaAPE9aGxd
+        ls0X6RdOijsofktB+aMeUB+eBpB0S5qr3N130ACIj8laIjrMmCoGnXtP3M3VfluAekB9tM969ooBlLi9
+        liul88M0AOJDpPgzsleJ9O/eEs1+eUPbGIk1oD5QL5Va33+31E988v2NXNVH9aUBEB8B8c9bKgacOS5a
+        XXibh3xsBuoD9dLrp7c+Ll6/ZuXSbe8Pr714HA2A+AAp/qGS/u/sE10unuDxXpuCekH9PPbV4Q1lerYK
+        r7d7IQ2AeIkS/84touev7xeZF3UWVVA/qKdWfzuY3uDEpmBDXE4IGoBNkeIflL1S9Dr7Dhf9HALqqefF
+        98/f/8XeGoa4nBA0ABsixZ8x8znR45NDxkssOe93Bqgn1FfH828fvffrA5GGwOweNACb4R7693ppi+gs
+        55WB+uJOp4L6Qr09eO7YE3edPWr/tQAagL2A+NMXLxeP/fimaMwHfBwJ6q3jhXd/lqOA1LvOvWpvE6AB
+        2Aj0/tMXi84n9oqHOPR3LKg31F/Lc8deaPSPo/ZeEKQB2AT30L/P2jWi/S/viLp8iaejQf21u/jOvxuf
+        3vFAo3M2ngrQAOwBxD9kxhLx6KcHjRdT6hoVcRaox+Y/Hz/R4Jt9EY3OHrGnCdAAbIB76N9tywbjVBkP
+        /BQNUI+oz4bfHeh2x7kj9pwK0ACsB73/4JlLxMNf5uwl6xoTcSaoz6Y/H/u4/vf7Y+44e9h+owAagMW4
+        e/8uW9aLlhfedNzv8ZObg/pEvd729Ss96p89bL9RAA3AWoy5f9Zi0eKz/bK3eF3biIizQb02/sfRD2p/
+        uSuy3k+H7DUKoAFYiBR/Bub+61aJZhfe4Ny/iIJ6Rf3W+vHAQ3XPHrLXKIAGYB3o/VHe9/95j7iHc/8i
+        Deq3zo8HDtX+6WBo3R8O2GcUQAOwCHfv32vJUnHPudf4451FHNTv3edf/1f1v++pU/uH/fYZBdAArEH1
+        /i0PviDu475/QIB6Tn1v/axbv9sXWuubl+0xCqABWIAUP1b+B2UtEnf+dZ+oxxd8BgSo57rnDn91y5c7
+        Ym/9eq89RgE0APMxen9s/a1eYTw4Up2LfwEB6hn1XX7ztJY1/rYnpMYXO6wfBdAATMbd+w+R5dzk2BbZ
+        ILj1F0igvtO+3LHuljO7wqp/+iINIOBw9/4Y/jf4ap+o+zNf9RVIoL5r/3Twu7Irxsfdcnqr9dOAomIA
+        u199U1y+fPmG6L5jBWrxr+vyZaKebAzVNY2EFF1Q36j3chsmP1D1482hVU+ss3YUQAMwETX8z1womu/b
+        yF/0DVBQ7xWPZs8ut2qCq8o7a60dBdAATMQ9/B88dYG4/dQOvuk3QEG9V/nmpfcT09tHpL29JsQQolVB
+        AzAPNfzvN3uRuO2HA3zfX4CCeq9z9uB/xXVpUSn1jZWhlV+eb900gAZgHmr432nVMlHrHMUfyKD+EzM6
+        tU05tiKs0t55NABvsb0BqOE/5v9714n6HP4HNKj/8rtnz0ro9Uh4pZfmWbcOQAMwiSvz//mi4dtbOPwP
+        cFD/aZ+/eDSibtXIii/NtW4dgAZgDpj/4/DPoCnzRJ0vdjvm4Z+5Fz/TlqddQXp1+bAbRv1/s/d7qbmo
+        invmhJZdNcGaaQANwBzU/L/37IWi+g/7HLP/TwPwD6h/tIO4bi2rJU8d5KIBeImtDcBj/t85e4mo/uM+
+        baOwIzQA/4F2kDCw3cNxnZuFl1090Zp1ABqACVyZ/y8QrdcvEzXP6RuEHaEB+A+0g8SMToPjOj0QUWbl
+        eGvWAWgA/kft/w+aMl80273aUS/+pAH4D7SDctuy5kndRUkDCC0xoa/50wAagP/xXAC869B6Ue0fB7UN
+        wo7QAPyIbAeVT6x9UeouuszysWE0AC+wtQG4FwDTn50rGhzfpG8MNoUG4F9SP37hdam7mKTh3Vw0AC9w
+        igHUfW+zo370s9sv7xqicgpIry4fdgTtIPWzrR9L3cVGt2zsKj6ut/kLgTQAP+OxAzBw8hxR69RWPgJM
+        DNAO0r548Vupu/joBxuFF3/6cRpAYbG9AUxdIAZOmi2qf7qdBkAMDAM4s+OC1F1CdPOGEUmjupu/E2AH
+        A8hLvHZBl/Y8yWUAVb/Ywd/9JwZoB2l/3fmfUncJUQ/cEZH0ZFcagJ3RpT1P3FuAeAZgwDOzRJUzO2kA
+        xMBtAP8rdZcoiUx84rFQ+V9zgwaQf3Rpz5NcBiCHfNrGQAITtAepuyRJVOLQTjQAO6NLe154HgIyRgCf
+        b3fUOQDiR2Q7SPtiO0YAxSVRCYM7hEbcWdvcrUAaQP7RpT0vPA8BDZg4U1Q9vZUGQHKAAXy2DWsAMIDo
+        hPR2oRGNbqUB2BVd2vMitwHc8uFmGgDJQbaD1E82X5S6MwwgfkDbsIgGNWkAdkWX9rzIbQA1T2wS1c7R
+        AIhEtoOUU8/jHECOAfRrExZxe/XAM4B5G7cbJuANH3/xV61oFbrvFBRd2vMitwHUOb5OVD13QN8gbAhO
+        1+nK064gvbp82BG0g5ST609L3eUYQK9HwsLrVAk8A/AFEKiuQSh03zGD3AZQ/9BqUfUsDcBfOMoAZDuo
+        9Naq41J3hgHEdXswzFWjMg2gMDjFABrvXi6q/rRf2yDsCA3Af6AdVNy/cJfUnWEAsZ2bhYZVKU8DKAx2
+        NgCUqdoGbLJpsajy7V5tg7AjNAD/gXZQauHIxVJ3MIComLb3hYZWLEUDKAx2NYDcB4EeXjpfpH21S9sg
+        7AgNwH+gHcT3aT1c6s44CBT90J2BeRDIFzjFANrNnY2fh9Y2CDtCA/AfaAdy3t9R6s44ChzVtD4NoLDY
+        2gA8HgbqNmWGSD3tnLMANAA/gTMAsh1EN2twu9RdgqtmSkREw1sD82EgX+AUA+g7brqo/sZaUfWsMxYC
+        +UIQ/4D6r/zu2h+l5spKElzVKkaE106jARQW2xuA+4UgMIB6Ly8TVR30anDie1D/FY88hy3A0pL4sNRy
+        4WFVK/CFIIXFtgYg8XwlWL/xWeK+tQtElb85ZyGQ+B7Uf/LMYdgBKCWJDa1YyhVaPpkGUFgcYwATZog2
+        c2eJtM+38ZmAQEXWO+o/rmuLx6XmkiUxrhqVXSElEszdAkTQAPyP52Gg/hNnim6Tpom09zc46kQg8R2o
+        95ST6/8V2bhWPam5EpLo8NuqhQXHRdMACovdDQDlqg4D9R6bKWrv4zpAoGLM/49mn5J6Ky8xzgC4qlUM
+        DYpw0QAKi50NIPdOQJ9x08S9a+bhdVDaBkKKNqj35Dl/ypZ6M3YAQsuVjAitkMyfBvMGRxiAeycAC4Ft
+        Z2ThRyG4DhBoYP9f1ntsh6adpd6wAxAXkpwYHlIygT8O6g22NgBJ7oXAnmOniluOrnDUg0HEe1DflY4t
+        /zG0dPFqUm/GAmBo+WRXUGyU+cN/BA3AHK5dCJwleo/JFI02zhdVHPRcAPEe1HfZDZPxe4AVJMZDQKGV
+        y4QWCw+jAXhDXi8V0X3HVK6sA8zPWQcYO020yZomUk5t4jQgUJD1jPqObd+0h9RaOUliUFREpJwCWDP/
+        RxQVA7A9mnWAHmOmiOoHloqqP7yibzCkSIF6rnj0uW+k4KtLrRnz/+CE2PDguGhr5v8IGoB5eK4D9J8w
+        U/R+eqq4e8Vskfr5ixwFFHWw+CfrueSMocukzipJSkpiQiuUCitmxfafChqAeeQ+D9BnbKboMHmqSH17
+        DQ8FFXFQv5XfWfPfUc0atJQ6u7L/H1wiPrRYSDANICC4sg6wIOfBIDkNePypZ0XdrXg2YLe24ZCiAeq3
+        3PYZb0iNpUqMB4Dk0D8iKCbSuvk/ggZgItIArp0GzDCmAa2mZ4qU99c76m3BJP8Yb/+V9RvbrmkfqbGK
+        EmP4H5wQ4yrmCrVu/o+gAZjL9dOAaaLH6Mmi5q6FosrXL2kbEHE2qNfye+edDo6PweJfzup/eFik/HNo
+        seAg64b/CBqAybinARgFqN2AXnIa0GL2NJHywQbZW3AxsCiB+kS9Jg7pOELqK0WCx3/jgqIiwoMiXNb2
+        /ggagMmoaYAxCrh6KKjbU5NEjd2LZG+xR9uQiDNBfVZ4ef4XIaWSakt9qcM/0cGJsWGWLv6poAGYjzEN
+        UIuB7teEYTHwQYwCuBZQZFBzf3fvj8W/MpKEYmGhEUGR4Vj8owEEJLrFwDFTRffRk8St2xfweHARAfVY
+        fvecj0KS4m6V2rqy+BcUE+kqFhpi/fAfQQOwBrUYaLwu3P2I8OOjJ4tWmVNFylur+JCQw0H9VX5r1f/E
+        dnygl9RVmgSP/iZK4UfK3h+v/7a+90fQACzCYzFQPSGILcEeI58Rt6+fI1I/3crTgU4Fp/5k/ZVZP+kV
+        qalbJKr3jw2KirBP74+gAVjHjUYBHcZNEmkHnxNVv3POT4iRq6DeKh557mLE7dWbS01d2/tHuOzT+yNg
+        AHE0AGvINQpQawEYBTRdMF1Ufs9ZPyVOchb+UG/Fn+41TeoJz/xf7f0jwl3FgoPt0/sjcgygOA3AIjxH
+        AZ47Al1HTRS1N88VaZ/x7cGOQdYT6qvctqx3Q4rH15V6urryHxIcWcwVZq/eHxEeGRUUm5h0xQCwNYWe
+        SddYiR+QZX11RyDnrcE4F9Bz1CTRbkLOVKDKtzwh6ARQTxUPL7kY0ahWa6mlqhLs++OtvzHFwsNcxYKC
+        7NX7I1zhEUEx8YlXDGDgpDnfo1fSNlbiF645F+B+SAinA3uMmCgemJspKr+9mrsCNsdY9Zf1lDS822Sp
+        oxqSyhLjoR857I+Q83977PvnjjBXeFBUbNwVA5CN7yMagMmoUYCcCuB0oHpGoOfoyaL78AmiwZpZIuXD
+        TVwPsCnGgR9ZP6WXjdkjNVRHgt4fZ/6NR35l7x8m/2u/3h8RGhYWFBkdc8UAOmeMfhG9kbahEr+hRgFD
+        MheI9MnubUH3gmDnpyaKGtvnizS+OMR+YN4v66X8zlmfh1Us3VRqCL2/euFHrJz7h8uhvz17f0RISGhQ
+        eGQkDCBWUrr+fS1GGOsAmkZK/AhGATABzwXB8dOvTAXajX9GVNm3JOeUIE3AHsh6QH1UOLDofET96u2l
+        fnDiD9t+OQt/wUGR0gDst/DnGcHBIdgFwBDFMIASZcrf0X/izMucBljAlanAwmumAjgb0H3EBNEy81mR
+        cmQpFwVtgrHo92r27/G9Ww2T2sHDPhj6q7f9REvx23foryJIRlRMHBIaI8F7ytMe6TlwM0cB1nB1KuB5
+        NiBnV6Db8PHifiwKHlvOF4laDMq/0vHl/04a0X2q1AzEf82ef7HQEDn0L2bfob9nhIVHYJgSLcGWRUrJ
+        shWa9RmbeYlrARZwzVQgZ1fAeGfA01OM9YBuT44X9yyeLiq9uZK/LWgRKHeUf/HxfRdJvdSS4Lgv5v14
+        1j9e9qoREnsP/T0jREZQcHCk/F8MXeBiNRs2e3hK/4mz/sCQVNtQif9wTwVgApgKXFkPgAmMyDGBO5dm
+        4WETmoDJoLxR7iWnDVkldYKeH2/5UVt+CZIoOa+2/9D/2pDyD5ZDFrhXzrllOFq9Bzp234J5KE3AAtRU
+        wHM9wHhWIGdRsOuT40TjZTQBM1HiT541bG1QZPhtUiMQP077QTM58/6gICyoO0n8RgQFh4R4rgMgU7VD
+        w1yNm7brulUOQf/gEWGTUVMBmIBaD5g485pFQZjAndlZotIbcjrwPdcE/AnKF+Vcctrg1W7xY7sPK/7Y
+        78dbfmKk+NGJOmPenyuQYCQc04BECVYyjVGApHG9e5vN6D5i4iXsT3M0YCIeJjAY5wPcJtB7bGbOISG3
+        CWBNoPLry3NeKsotQt+CrT5ZrpWOLf+3e86Pgz5K/NAJ1s1inSx+FRi2YPiiRgGY12Bf83bJnYnJpds3
+        addlpzSC33FIBXvVGBWgcXLL0I/ABGQZq0XBK4eEcplA0zmZIuVwtvHb8zQBHyHLEeVZ8Wj270kju0+R
+        OlDiryLBOX+s+OMAXYQEi36OG/p7hhoFIDNYC8CiBlwOq5yGCUjuiUsq0arG7Y2mNuvUY1/79OGfdXli
+        zFlsUaExEn8xSfSQZdwduwDDxwtZ5qJTxmghy1+07f+EaNM3Q7TqPVjc+/RIkbp3oUj9y1YeG/YSlB/K
+        EYd84vu0zpBtv0iLXwUygbWAKAmmAljcUCZQX9JIcpfkHsm9kvskTYgp4Jjp/ZJmkgclj0jaSTpLukvw
+        6ql+rhqVx5d9IfMb4xXjfICoUKDcUH7ld83+LOKOGo/Kcs0tfoyQ0Uliyuy0Ff+bBkYBaiqAcwFY2cSx
+        RiwKogDwjPMdkoYSjAhgBne7gSkQ/6JMF2YAI3hI0kbSQdJFgp+d7h1SKmlo8uwnjld6Y0XOa8Y5Jcgf
+        xnx/j0C5lV4+bldYpdIoa2z1oe2rOT96/iIpfhVqKgATwEgAe5s44IDzATjqWFMCR8QCIaYGMIQGEpgC
+        MQeMxGDAMASMCjAiwDPoOI/+mKSbpEd8vzYrK+xb8M/U01s4JcgDY8gvy6nCwUW/Jj3ZFfN9rPSrfX50
+        gEr8GPYXWfGrUCaATCKzyDRWOzEagBHADXH0EYUDQ8BiIaYJxBzQMGHCaKQw4cYSmMEDEjUqgBl0DK9d
+        5Yky6yd9jGfVq3zDXYLrQK8vywXlI6dO70c0qNlRlhs6N5QzdsLwaz7Y6kP7L3Jz/puFmg4gs9jiwJQA
+        Qx9MCzAHghnAFTEnwjFIT7CDQPwPeiaYMRoqTBiGgBECpgsYGbSQPBQcG9U2cVjnpRX2L/wt5aPnuTbg
+        xpjry/KocMDo9RcEJ8TARLHWBfGjg0MZo51jnx8PywWM+D1DjQaUEWBEgK1CuCGmB1gshCmgkIi5oFfC
+        sBRTNCzYqtGZWq/B1ExNFZqE35raVc5tj1R6fdn/4Bn2QJ0WIN/IP8qh9Mpxh8Nrp3WS5YNplRI/proo
+        S+yEoX2jvaPtB5z4PcNzRICpAdYIUChwRZgC1guINWB0hh4KhqymahiJqTUbtXiLRt44ps29GeW2zzhd
+        6a1VIu3MzoAxAkP4Mr/IN/Ivy2GIu0xQNigjlJXnSn/O2f6ctu7oQz6+DBSCMgOAgiHWA2NGQ4UZwwzQ
+        c2FkgMaMqQLWa9C7YZpQPzguunHCgLZjy++ec6aSnP+mndlRZI0gR/g7BPKJ/CLfyD/KQQLhew75MZLC
+        6MpzsQ/lS/EzbB/KmNFoMTLD0BXTM08jUOsFxiJiSImEOxMGthtbftfsT/GIa+pn23LWCJy+WCjTj3wg
+        P8gX8od8Ir/Itzv/KAeUB8oF5YNy0g35KX6Go0KNzNRWrucuDqYGGOZiRHDFCIJjoxrEPHrf4LKbM9+u
+        +Gr2f6f8eaOxOo7ft9cKzKYgvUg30o98ID/IF/KHfLrzi3wj/ygHlAfKRa3yew75UY4MhiNDNxpA74a5
+        Lba1MNzFGoGaGqhtxXpR99XrUGJK+pryL8//zhgVfLJZVP3uZfuOCtDby/QhnUZvL9ON9CMfyI87X8gf
+        8on8It/IP8oB5aF6fZQTyou9PqPIhOdoQK0PqGkBtnGxz62MQI0IMC+uF1I8vlFMm3vTSy8ds7vCvgU/
+        QVwppzaJKn/fLaqetXCaAMHL+yMdSA/ShfQhnUgv0o30u/Ph2eMjn8gv8o38oxxQHigX9vqMIhtqNKC2
+        cjHMxZkOLHbdyAhw2AgCMkYFUlSNY1rd3a/E5AFryu2c9UnFI8/9q/K7a6QAnzeemMPz8v6aLuC6uD7u
+        g/vhvrg/0oH0IF1IH9LpTi/SjfTfSPjIN/KPcuBcnxEwgQaOXg7DXDR8dbhLGYGaGqiTnjhPgGHzNWYg
+        qR9eK615TLsmw4qP67Oq3Nbp78ge+Kyccxsr7ZVPbhCpH71g7LWnfbUrZy3h+5eNRTljp0GNHNCTyz8b
+        fy//HZ/D5/E9fB/XwfVwXVwf98H9cF/cH+lwp8dT9Egv0o30Ix9qqO8pfOQb+ecKPyMgQ00L1PoABIEF
+        MHXKUx0qUqMCrJRjj1yZgVovuGIIIOKOGg/JIfjAuC4tJkuhri29asL+ctumnyi/Z87nFV5Z8CNO3FU4
+        tPi/Kh5e8n+yB8fv6P0f/mz8vfx3fA6fx/fwfVwH18N11T3c91P3RjqU6JE+pFP19kg/8oH8IF/IH/Kp
+        5vkc7jMCOtS0wHNEgCGxOkOAVXGchEPviZVybJVh1RwiQw+L4bWnIagRgjIFhRJuQfD8vromru8peNwf
+        6UB6kC6kD+lEepFupB/5QH7UUN9T+Oz1GQwZEIKaGqg1AiyKYVVcPfuB48bKDNTIAMNrNTrAPNvzoTCI
+        1NMYFErMOjw/p4TuKXZcH/dRvTzur3p6JXqkE+lFupF+5AP5Qb6QP5VXBoOhCYgDvSMEo6YH6D0hJgyh
+        1cgA82n1MBgEiHk2emBlCph/K2NALw0gYE+UqD1Rn1VCx3WU2HF93Af3w31xf6RD9fRIH9KJ9KphPhf3
+        GIxChOop1agAW2QQFXpUz+cO0NtCgJhnowfGnBvixKk6CBVDcogWPTUErEwiN+rf8Dl8Ht/D93EdXA/X
+        xfVxH9wP98X9kQ6kB+lC+pBO9vYMhg8jtxmo9QI1OlCGgB4YokRvjNV2CBVDcogWPTWAiNFz5wZ/rz6D
+        z+N7+D6ug+vhuri+Erzq5dW8nqJnMEwIJTC1eKgMAT2vMgX0xsoYMCSHaJVBAMzPc6P+TX0W31NCV707
+        ro/7eApeDe8pegbDgvA0BE9TUMagzEEZRF6oz6rvqmspsVPwDIYDQonU0xwUEHNucn/G8/sMBoPBYDAY
+        ARvFiv0/GCUTFo475vMAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
