--- a/SylDesk/SylDesk/FormRegistro3.resx
+++ b/SylDesk/SylDesk/FormRegistro3.resx
@@ -135,25 +135,44 @@
   <metadata name="editar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="nombre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="superficie.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="descripcion.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="detalle.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="editar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        XgAAAV4BX2xuegAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMESURBVFhHxZdd
-        SFNhGIBP4UV0H3WjbqXO2mnqNm2xmkdTd8xNV/5tmpJKXRiJkaJpzZiQCYZZYReFmZk/mKRSrSErmTqV
-        6Cbqrh+ii+6jGwl6O591vs70FY/7qYuHse3lfZ7tG2ccBgD+K4zPv2QLFY/Ho8SWy4GZ9S9CqIxNPPk+
-        6XZrMMFGhCVgZHyCsBxMRNgCBkfHg4oIa0AwEWEJ8M0vBDLnv4DJMEIKmJmdh4GhUegfHIYXvjn6+px/
-        sRmTYQQV0H3zNmTyVtizLxli4tUr7N6bBFyOBTqv9UQuwD3tBXtlNZWuhzHT/E6pZHdiwtXIDiBny+cX
-        SkQsaDLtYHRchENlTkjKKofYhP1/349Tv2I4LgqTSpEd4GzvoMsTdBmQ3zoJlb3vAzjW5obEtBw6F53A
-        tmBSKbICvDM+iGe1K0sViclQ2P5yjVyk5KoflGq9GLG8Ky5lByYWkRXQN/CQfirydWNiKVxVJ50XjsqC
-        iUVkBVxyXaEL8xpHUakUm9NN56Pj1S5MLCIroLa+gS4sdHlRqRR712s6L/wY72NiEVkBHV3ddKG5rg+V
-        SrE0jdH56Dj1OUwsIitg5NFjulDL16BSKWm2Ojofo1IbMbGIrAByDTCYsuhS89k7qJiQ1zBM54Tz/6xQ
-        KLZhYhFZAYR7D4aECw27spg8Gu2tUNb9horLe96CqcIFsSoNDciyFE9iUimyAwh155vo8t+woErNhsQD
-        ZhonYuB4OHG6HipO1d/AxCKbCiB0Xb8FrNYQIJOi0ughp6D0B5GXVp2B7AIHGI5Yv+rS+VqO49Ycx6YD
-        CE8909DU2gYl5Sch1ZgBuoPpUOSohMYWJ0w9ew53B4Z7hYBvh/njoDPxUrw6nXV7yAEbQf6OrY4a2yo5
-        GhGxAIZhtqRyuZ+QgICIiAWQ5cK5Fwuyn6vkARERDSDoTbnVgmy9iGbhzmihP+zML+WJARtEfKBDkQaL
-        0Jv4KXQ4UuhM5jJB/OVPwEctl2tAByOJcDGKSuGO6hnm8lbyHB36dwDzCzu7L5imqpSLAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAX0AAAF9AWD9boMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADQUlEQVRYR7WWy08TURSHR6P/gEYTo7ZV6EB7eVgHoxIZMA1pCwkEFYimgKbKhhhkIWyMYYELEqNB
+        hJUrdyxM3GqIcYcrEhMXGnHFXkzKikSv5zdthzt3Tgdq6+LrY+g5332cey6GlJIlHIudCNU3DYWiYp5Y
+        DZniJ71vhMz4Cr1P03vSsqzDXGwl+B8YxoGwKSZIsk3IIMJR8TkSFef0HJXg+RJpbIzQTD9wsgB2QvXi
+        sdHVdUjNtV/cD448Kn5pyV3qWtplJJZg/+Zgirdq4v1SeKFl52YurvTLzNRrOTz/SY4ub8iRl9/ktdn3
+        8mruqTwrLnh+62CKMV2wF85Lcc/dRGGzWdqjc44QYo6h+TXZmrzlHUBUbJ0yW0/qkiAK1a4VHOScVCe7
+        +FXGLvWoA5Cno+INJyqHUTxqbgIse9DMdQZm38lwQ4s6iDxt6UFOxmFQAM65mwB7zomCSKRuqwOg49kU
+        42QcGMCqGlwquEroHHviGQCtapaTcRjFDucE4qhxgr3ofbjiGQAV9TNOxoEV2CgF4pxXsv8lUvdfeQcQ
+        FY84GQetgNPb3WCcc04SRPvQjHcAZjzDyTiwAtNqMJoMJynPdxm/3OsZQF1dy3FOxoEVSKrB6HBoMrzM
+        T3J8wSMnNjlROQxcqbjV1CTocGgynFDlxtxHeSZuqXI6AWKGE5XDecGVSsE7aiJ0ODQZToxlx8x1eTxx
+        cTszeOeYLgnC/YArVU0G0OHQZHDOcdRQ7Sg4fc9BpKFZXs/ek9nxyfXB3NQRVRLE7ge6z3Gl6on3A+Td
+        fcMkf1Bkcn1gdOKoKiqH7wGuVEq6pUvKgWUvzLwg77uZk+3d/dKy038sO/PD6kjd1R0q7ENcqbjVSJDX
+        hQqbKDjsOWZckpPYT0dqGf9zcC7fAxXcarhY0NvRXtHh0GT0c449xyCKMy/HkhpTwvfgX8Gek4SWnZU7
+        nLczi3qc50u1OHvOiD10pF+oMZ4E1dJmp3Os1M9CKcaXpFpQcIzQR5udeo7fs0mqAdVOgiVdyNHWmRph
+        k9QCFBwn9dCZ/sIG1woUHCveJc8G1hKSLGhSlTU2qNag4Bj574TdY7MB/wMUHPacxHliDXIppfEXNGSB
+        FnBkrwgAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
